Storage/S3/KJDev/04-ConsoleService.yaml
apiVersion: v1
kind: Service
metadata:
  name: kjdev-core-console
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https-console
      port: 9443
      protocol: TCP
      targetPort: 9443
  selector:
    v1.min.io/tenant: kjdev-core
  sessionAffinity: None
  type: ClusterIP
