Storage/S3/KJDev/04-MinioService.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    v1.min.io/tenant: kjdev-core
  name: minio
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https-minio
      port: 443
      protocol: TCP
      targetPort: 9000
  selector:
    v1.min.io/tenant: kjdev-core
  sessionAffinity: None
  type: ClusterIP
