Storage/S3/KJDev/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-gw
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    v1.min.io/tenant: kjdev-core

  sessionAffinity: None
  type: ClusterIP
