Storage/S3/KJDev/BackendTrafficPolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: s3-route

spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: s3-route

  timeout:
    http:
      requestTimeout: 1800s

  # healthCheck:
  #   active:
  #     interval: 5s
  #     timeout: 8s
  #     type: HTTP
  #     http:
  #       path: /-/health/ready/
  #       expectedStatuses:
  #         - 200
