Storage/S3/KJDev/DashboardDestination.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-kjdev-dashboard-originate-tls

spec:
  host: kjdev-core-console.core-prod.svc.k0s.resolvemy.host
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
