Storage/S3/KJDev/DashboardRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: s3-auth-route

  annotations:
    external-dns.alpha.kubernetes.io/hostname: 's3.int.mylogin.space'

  labels:
    wan-mode: 'public'
    lan-mode: private

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: kuadrant-core-prod
      name: main-gw

  hostnames:
    - s3-private.int.mylogin.space

  rules:
    - backendRefs:
        - name: kjdev-core-console
          port: 9090
