Storage/S3/KJDev/Minio.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-main
spec:
  hosts:
    - s3
    - s3.mylogin.space
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      targetPort: 9000
      protocol: HTTPS

  resolution: STATIC
  workloadSelector:
    labels:
      v1.min.io/tenant: kjdev-core
