Storage/S3/KJDev/MinioDest2Rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: s3-originate-tls
spec:
  host: minio.mylogin.space
  trafficPolicy:
    tls:
      mode: SIMPLE
