Storage/S3/KJDev/MinioDestRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-originate-tls
spec:
  host: s3.mylogin.space
  trafficPolicy:
    tls:
      mode: SIMPLE
