Storage/S3/KJDev/Route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: s3-route

  labels:
    wan-mode: 'public'

spec:
  parentRefs:
    - name: ingress-gw
  hostnames:
    - s3.mylogin.space
    - '*.s3.mylogin.space'

  rules:
    - backendRefs:
        - name: s3-gw
          port: 9000
