Storage/S3/KJDev/SecurityPolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: s3-admin

spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: s3-dashboard-route

  extAuth:
    failOpen: false

    headersToExtAuth:
      - cookie

    http:
      backendRefs:
        - group: ''
          kind: Service
          name: dc1-k3s-node1-aaa-authentik-server
          port: 80

      path: /outpost.goauthentik.io/auth/envoy
