Storage/S3/KJDev/Stuff.yaml

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    argocd.argoproj.io/instance: k0s-cntrl-storage-s3-kjdev
  name: minio-originate-tls
  namespace: core-prod
spec:
  host: s3.mylogin.space
  trafficPolicy:
    tls:
      insecureSkipVerify: true
      mode: SIMPLE
