Storage/S3/KJDev/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-main
spec:
  hosts:
    - s3-minio.core-prod.svc.k0s.resolvemy.host

  location: MESH_INTERNAL

  ports:
    - number: 443
      name: https
      targetPort: 9000
      protocol: HTTPS

  resolution: STATIC
  workloadSelector:
    labels:
      v1.min.io/tenant: kjdev-core
