Storage/S3/KJDev/DashboardPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
    name: minio-kjdev-dashboard-aaa-policy
    namespace: external-istiod

spec:
  selector:
    matchLabels:
      istio: ingressgateway

  action: CUSTOM

  provider:
    name: 'authentik'

  rules:
    - to:
        - operation:
            hosts:
              - s3.int.mylogin.space
